test fixing links too big

--- a/style.css
+++ b/style.css
@@ -182,10 +182,9 @@ ul {
 }
 
 #rsicones {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
+    display: flex; 
+    justify-content: flex;
+    max-width:80%;
     gap: 3rem;
 
 }
